update dependencies + add profile for drone.io build